Add links to NAM23 page

--- a/nam23_poster.html
+++ b/nam23_poster.html
@@ -6,6 +6,12 @@
 	<title>NAM23 poster</title>
 </head>
 <body>
-This is the page where I will add complementary figures to my NAM23 poster.
+	<h1>Useful links:</h1>
+	<ul>
+		<li><a href="devang_NAM23_poster.pdf">Click here</a> to get the digital version of my poster.</li>
+		<li><a href="devangliya.github.io">Click here to visit my homepage</a></li>
+		<li><a href="https://skirtor.streamlit.app/">Click here to see a cool interactive demo of the AGN model we are going to use! (Still a work in progress)</a></li>
+	</ul>
+	<p>I am going to add more information about the project as and when I have some time during the meeting so stay tuned!</p>
 </body>
 </html>
