--- a/nam23_poster.html
+++ b/nam23_poster.html
@@ -8,10 +8,10 @@
 <body>
 	<h1>Useful links:</h1>
 	<ul>
+		<li><a href="https://skirtor.streamlit.app/">Click here to create your own AGN! (Doesn't work that well on a phone)</a></li>
 		<li><a href="devang_NAM23_poster.pdf">Click here</a> to get the digital version of my poster.</li>
-		<li><a href="devangliya.github.io">Click here to visit my homepage</a></li>
-		<li><a href="https://skirtor.streamlit.app/">Click here to see a cool interactive demo of the AGN model we are going to use! (Still a work in progress)</a></li>
+		<li><a href="https://devangliya.github.io">Click here to visit my homepage</a></li>
+		<li>Want to chat about the work? Questions? Collaboration ideas? Write to me at: d.h.liya2@ncl.ac.uk</li>
 	</ul>
-	<p>I am going to add more information about the project as and when I have some time during the meeting so stay tuned!</p>
 </body>
 </html>
