--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 				</div>
 				<div class="col-lg-4">
 					<h3 style="font-weight: bold;">Science/Demos</h3>
-					<p>Links to anything and everything related to science. Also, some fun interactive online demos.</p>
+					<ul>
+						<li><a href="https://skirtor.streamlit.app/">Create your own AGN!</a></li>
+					</ul>
 				</div>
 			</div>
 			<div class="row">
