Add copy code button
Also remove NAM23 pages because they are outdated

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					<h3 style="font-weight: bold;">Computers</h3>
 					<ul>
 						<li><a href="python_tricks.html">How to do that in Python?</a></li>
+						<li><a href="hobby_computer.html">Setting up Linux on my hobby computer</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-4">
@@ -48,8 +49,9 @@
 					<p>Experiments and tutorials to do astronomy from the comfort of your home!</p>
 				</div>
 				<div class="col-lg-4">
-					<h3 style="font-weight: bold;">Science/Demos</h3>
+					<h3 style="font-weight: bold;">Science interactives</h3>
 					<ul>
+						<li><a href="https://shrinkinator.streamlit.app/">Shrinkinator: Shrink things to make black holes!</a></li>
 						<li><a href="https://skirtor.streamlit.app/">Create your own AGN!</a></li>
 					</ul>
 				</div>
